# gchatter

./: .gitignore  Cargo.toml  README.md  app.toml
src/: chat.rs  config.rs  context.rs  helper.rs  main.rs  transcribe.rs
