[package]
name = "gchatter"
version = "0.3.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
async-channel = "2.3.1"
futures = "0.3.31"
ollama-rs = { version = "0.3.0", features = ["stream"] }
openai = "1.1.0"
pv_recorder = "1.2.6"
reqwest = { version = "0.12.15", features = ["json", "stream"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["full"] }
tokio-stream = "0.1.17"
toml = "0.8.20"
whisper-rs = { version = "0.14.2", features = ["vulkan", "hipblas" ? (features.hipblas)] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
elevenlabs_rs = "0.6.0"
pulldown-cmark = "0.13.0"
#leptess = "0.14.0"
#paddleocr_rs = "0.1.1"

[dependencies.gtk]
package = "gtk4"
version = "0.9.6"
features = ["v4_18"]

[features]
full = ["leptess", "paddleocr"]
leptess = []
paddleocr = []
hipblas = []
